<?xml version="1.0"?>
<package format="2">
  <name>mpcc</name>
  <version>1.1.0</version>
  <description>MPCC package for MUR Fast Lap</description>
  <maintainer email="khengyu_061192@hotmail.com">Kheng Yu Yeoh</maintainer>
  <license>MIT</license>
  <author email="dwirya@student.unimelb.edu.au">Dennis Wirya</author>
  <author email="khengyu_061192@hotmail.com">Kheng Yu Yeoh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>mur_common</depend>
  <!-- Definitely has more dependencies here -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
