<?xml version="1.0"?>
<package format="2">
  <name>alexmpcc</name>
  <version>1.1.0</version>
  <description>Alex Liniger MPCC package for MUR Fast Lap</description>
  <maintainer email="khengyu_061192@hotmail.com">Kheng Yu Yeoh</maintainer>
  <license>Apache-2.0</license>
  <author email="noemail@noemail.com">Alex Liniger</author> <!-- For Controller https://github.com/alexliniger/MPCC -->
  <author email="khengyu_061192@hotmail.com">Kheng Yu Yeoh</author> <!-- For ROS related Implemenetation and specific tuning -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>mur_common</depend>
  <!-- Definitely has more dependencies here -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
